--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,17 @@
 			<a href="#">Answer 03</a>
 		</div>
 	</div>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=654700437919801&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<div class="fb-like" data-href="http://sebbdk.github.io/cthulhu-science/src/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 	
 	<script src="js/vendor/jquery/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/map.js" type="text/javascript" charset="utf-8"></script>
