--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
 			<a href="#">Answer 02</a>
 			<a href="#">Answer 03</a>
 		</div>
+		
+		<div class="le-btn">
+			<div class="fb-like" data-href="http://sebbdk.github.io/cthulhu-science/src/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>	
+		</div>
 	</div>
 
 <div id="fb-root"></div>
@@ -33,7 +37,8 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="fb-like" data-href="http://sebbdk.github.io/cthulhu-science/src/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
+
 	
 	<script src="js/vendor/jquery/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/map.js" type="text/javascript" charset="utf-8"></script>
