--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
 	<title>Cthulhu science</title>
 
 	<link rel="stylesheet" href=" css/screen.css">
+
+	<meta property="og:image" content="http://sebbdk.github.io/cthulhu-science/src/img/scene01.png"/>
+	<meta property="og:url" content="http://sebbdk.github.io/cthulhu-science/src/"/>
+	<meta property="og:title" content="Cthulhu science text adventure!"/>
+	<meta property="og:type" content="game"/>
+	
 </head>
 <body>
 
@@ -22,7 +28,7 @@
 			<a href="#">Answer 02</a>
 			<a href="#">Answer 03</a>
 		</div>
-		
+
 		<div class="le-btn">
 			<div class="fb-like" data-href="http://sebbdk.github.io/cthulhu-science/src/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>	
 		</div>
