open graph fixes

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 	<meta property="og:url" content="http://sebbdk.github.io/cthulhu-science/src/"/>
 	<meta property="og:title" content="Cthulhu science text adventure!"/>
 	<meta property="og:type" content="game"/>
+	<meta property="og:description" content="A game of Science and old ones."/>
 	
 </head>
 <body>
@@ -21,8 +22,7 @@
 		<img src="img/scene01.png">
 		<div class="info-area">
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+				
 			</p>
 			<a href="#">Answer 01</a>
 			<a href="#">Answer 02</a>
