--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 	<h1>
 		Cthulhu science
 		<div class="le-btn">
-			<div class="fb-like" data-href="http://sebbdk.github.io/cthulhu-science/src/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>	
+			<div class="fb-like" data-href="http://sebbdk.github.io/cthulhu-science/src/" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
 		</div>
 	</h1>
 
