--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,7 @@
 
 	<h1>
 		Cthulhu science
-		<div class="le-btn">
-			<div class="fb-like" data-href="http://sebbdk.github.io/cthulhu-science/src/" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
-		</div>
+		<div class="fb-like" data-href="https://www.facebook.com/pages/Sebb-games/257966274328084" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
 	</h1>
 
 	<div class="scene">
