--- a/src/index.html
+++ b/src/index.html
@@ -60,8 +60,7 @@
 	<script src="js/map.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 
-	<!--<script src="//track.sebb.dk/js/track.js" type="text/javascript" charset="utf-8"></script>-->
-	<script src="http://localhost/track/js/track.js" type="text/javascript" charset="utf-8"></script>
+	<script src="//track.sebb.dk/js/track.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 		_track.propertyID = "cthulhu_science";
 		_track();
