changed logo sequence

--- a/src/index.html
+++ b/src/index.html
@@ -16,22 +16,21 @@
 </head>
 <body>
 
-	<h1>
-		Cthulhu science
-		<div class="le-btn">
-			<div class="fb-like" data-href="https://www.facebook.com/pages/Sebb-games/257966274328084" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
-		</div>
-	</h1>
+	<div class="le-btn">
+		<div class="fb-like" data-href="https://www.facebook.com/pages/Sebb-games/257966274328084" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+	</div>
 
-	<div class="scene">
-		<img src="img/scene01.png">
-		<div class="info-area">
-			<p>
-				
-			</p>
-			<a href="#">Answer 01</a>
-			<a href="#">Answer 02</a>
-			<a href="#">Answer 03</a>
+	<div class="game-wrapper" style="background-color: #999999; height: 100%;">
+		<div class="scene">
+			<img src="img/scene01.png">
+			<div class="info-area">
+				<p>
+					
+				</p>
+				<a href="#">Answer 01</a>
+				<a href="#">Answer 02</a>
+				<a href="#">Answer 03</a>
+			</div>
 		</div>
 	</div>
 
